--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -617,6 +617,7 @@
   "Account": "Compte",
   "API & Apps": "API & Applications",
   "Details": "Détails",
+  "Authentication": "Authentication",
   "Security": "Sécurité",
   "Features": "Fonctionnalités",
   "Members": "Membres",
@@ -1004,6 +1005,19 @@
   "Authorization URL": "URL d'autorisation",
   "Where users are redirected to authorize this app": "Là où les utilisateurs sont redirigés pour autoriser cette application",
   "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.": "Les applications vous permettent de construire des intégrations internes ou publiques avec Outline et de fournir un accès sécurisé via OAuth. Pour plus de détails, consultez la <em>documentation développeur</em>.",
+  "Settings saved": "Paramètres enregistrés",
+  "Are you sure?": "Are you sure?",
+  "Removing": "Removing",
+  "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.",
+  "Manage how members sign-in to your workspace and which authentication providers are enabled.": "Manage how members sign-in to your workspace and which authentication providers are enabled.",
+  "Allow members to sign-in with {{ authProvider }}": "Autoriser les membres à se connecter avec {{ authProvider }}",
+  "Connect {{ authProvider }} to allow members to sign-in": "Connect {{ authProvider }} to allow members to sign-in",
+  "Connected": "Connecté",
+  "Disabled": "Désactivé",
+  "Connect": "Se connecter",
+  "Allow members to sign-in using their email address": "Autoriser les membres à se connecter en utilisant leur adresse e-mail",
+  "The server must have SMTP configured to enable this setting": "Le serveur doit avoir SMTP configuré pour activer ce paramètre",
+  "Restrictions": "Restrictions",
   "by {{ name }}": "par {{ name }}",
   "Last used": "Dernier utilisé",
   "No expiry": "Pas d'expiration",
@@ -1012,7 +1026,6 @@
   "Copied": "Copié",
   "Are you sure you want to revoke the {{ tokenName }} token?": "Voulez-vous vraiment supprimer le jeton {{ tokenName }}?",
   "Disconnect integration": "Déconnecter l'intégration",
-  "Connected": "Connecté",
   "Disconnecting": "Déconnexion en cours",
   "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Êtes-vous sûr de vouloir déconnecter l'intégration <em>{{ service }}</em>?",
   "This will stop sending analytics events to the configured instance.": "Ceci arrêtera d'envoyer des événements de statistiques à l'instance configurée.",
@@ -1083,7 +1096,6 @@
   "You can import a zip file that was previously exported from an Outline installation – collections, documents, and images will be imported. In Outline, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Vous pouvez importer un fichier zip précédemment exporté à partir d'une installation Outline - les collections, les documents et les images seront importés. Dans Outline, ouvrez <em>Exporter</em> dans la barre latérale Paramètres et cliquez sur <em>Exporter les données</em>.",
   "Drag and drop the zip file from the Markdown export option in {{appName}}, or click to upload": "Glissez et déposez le fichier zip provenant d'un export {{appName}}, ou cliquez pour le téléverser",
   "Configure": "Configurer",
-  "Connect": "Se connecter",
   "Last active": "Dernière activité",
   "Role": "Rôle",
   "Guest": "Invité",
@@ -1104,7 +1116,6 @@
   "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Gauche",
   "Right": "Droite",
-  "Settings saved": "Paramètres enregistrés",
   "Logo updated": "Logo mis à jour",
   "Unable to upload new logo": "Impossible de charger le logo",
   "Delete workspace": "Supprimer l'espace de travail",
@@ -1209,11 +1220,7 @@
   "Are you sure you want to require invites?": "Êtes-vous sûr de vouloir exiger des invitations ?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "Les nouveaux utilisateurs devront être invités pour pouvoir créer un compte. Le <em>Rôle par défaut</em> et les <em>Domaines autorisés</em> ne s'appliqueront plus.",
   "Settings that impact the access, security, and content of your workspace.": "Paramètres agissant sur l'accès, la sécurité et le contenu de votre espace de travail.",
-  "Allow members to sign-in with {{ authProvider }}": "Autoriser les membres à se connecter avec {{ authProvider }}",
-  "Disabled": "Désactivé",
-  "Allow members to sign-in using their email address": "Autoriser les membres à se connecter en utilisant leur adresse e-mail",
-  "The server must have SMTP configured to enable this setting": "Le serveur doit avoir SMTP configuré pour activer ce paramètre",
-  "Access": "Accès",
+  "Invites": "Invites",
   "Allow users to send invites": "Autoriser les utilisateurs à envoyer des invitations",
   "Allow editors to invite other people to the workspace": "Autoriser les éditeurs à inviter d'autres personnes dans l'espace de travail",
   "Require invites": "Exiger des invitations",
