--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -617,6 +617,7 @@
   "Account": "Cuenta",
   "API & Apps": "API y aplicaciones",
   "Details": "Detalles",
+  "Authentication": "Authentication",
   "Security": "Seguridad",
   "Features": "Características",
   "Members": "Miembros",
@@ -1004,6 +1005,19 @@
   "Authorization URL": "URL de autorización",
   "Where users are redirected to authorize this app": "Where users are redirected to authorize this app",
   "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.": "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.",
+  "Settings saved": "Configuración guardada",
+  "Are you sure?": "Are you sure?",
+  "Removing": "Removing",
+  "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.",
+  "Manage how members sign-in to your workspace and which authentication providers are enabled.": "Manage how members sign-in to your workspace and which authentication providers are enabled.",
+  "Allow members to sign-in with {{ authProvider }}": "Permitir que los miembros inicien sesión con {{ authProvider }}",
+  "Connect {{ authProvider }} to allow members to sign-in": "Connect {{ authProvider }} to allow members to sign-in",
+  "Connected": "Conectado",
+  "Disabled": "Deshabilitado",
+  "Connect": "Conectar",
+  "Allow members to sign-in using their email address": "Permitir que los miembros inicien sesión usando su dirección de correo electrónico",
+  "The server must have SMTP configured to enable this setting": "El servidor debe tener SMTP configurado para habilitar esta opción",
+  "Restrictions": "Restrictions",
   "by {{ name }}": "por {{ name }}",
   "Last used": "Utilizado por última vez",
   "No expiry": "No expira",
@@ -1012,7 +1026,6 @@
   "Copied": "Copiado",
   "Are you sure you want to revoke the {{ tokenName }} token?": "¿Estás seguro de que quieres revocar el token {{ tokenName }}?",
   "Disconnect integration": "Desconectar integración",
-  "Connected": "Conectado",
   "Disconnecting": "Desconectando",
   "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "¿Estás seguro de que quieres desconectar la integración <em>{{ service }}</em>?",
   "This will stop sending analytics events to the configured instance.": "Esto dejará de enviar eventos analíticos a la instancia configurada.",
@@ -1083,7 +1096,6 @@
   "You can import a zip file that was previously exported from an Outline installation – collections, documents, and images will be imported. In Outline, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Puedes importar un archivo zip que se exportó previamente desde la opción Markdown en otra instancia de Outline. En Outline, abre <em>Exportar</em> en la barra lateral de configuración y haz clic en <em>Exportar datos</em>.",
   "Drag and drop the zip file from the Markdown export option in {{appName}}, or click to upload": "Arrastra y suelta el archivo zip de la opción de exportación Markdown de {{appName}}, o haz clic para cargarlo",
   "Configure": "Configurar",
-  "Connect": "Conectar",
   "Last active": "Última vez activo",
   "Role": "Rol",
   "Guest": "Invitado",
@@ -1104,7 +1116,6 @@
   "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Izquierda",
   "Right": "Derecha",
-  "Settings saved": "Configuración guardada",
   "Logo updated": "Logo actualizado",
   "Unable to upload new logo": "No se pudo cargar el nuevo logo",
   "Delete workspace": "Eliminar espacio de trabajo",
@@ -1209,11 +1220,7 @@
   "Are you sure you want to require invites?": "¿Estás seguro de que quieres requerir invitaciones?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "Los nuevos usuarios primero tendrán que ser invitados para crear una cuenta. El <em>rol predeterminado</em> y los <em>dominios permitidos</em> ya no serán aplicables.",
   "Settings that impact the access, security, and content of your workspace.": "Configuraciones que impactan el acceso, seguridad y contenido de tu espacio de trabajo.",
-  "Allow members to sign-in with {{ authProvider }}": "Permitir que los miembros inicien sesión con {{ authProvider }}",
-  "Disabled": "Deshabilitado",
-  "Allow members to sign-in using their email address": "Permitir que los miembros inicien sesión usando su dirección de correo electrónico",
-  "The server must have SMTP configured to enable this setting": "El servidor debe tener SMTP configurado para habilitar esta opción",
-  "Access": "Acceso",
+  "Invites": "Invites",
   "Allow users to send invites": "Permitir a los usuarios enviar invitaciones",
   "Allow editors to invite other people to the workspace": "Permitir a los editores invitar a otras personas al área de trabajo",
   "Require invites": "Requerir invitaciones",
