--- a/shared/i18n/locales/da_DK/translation.json
+++ b/shared/i18n/locales/da_DK/translation.json
@@ -617,6 +617,7 @@
   "Account": "Account",
   "API & Apps": "API & Apps",
   "Details": "Details",
+  "Authentication": "Authentication",
   "Security": "Security",
   "Features": "Features",
   "Members": "Members",
@@ -1004,6 +1005,19 @@
   "Authorization URL": "Authorization URL",
   "Where users are redirected to authorize this app": "Where users are redirected to authorize this app",
   "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.": "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.",
+  "Settings saved": "Settings saved",
+  "Are you sure?": "Are you sure?",
+  "Removing": "Removing",
+  "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.",
+  "Manage how members sign-in to your workspace and which authentication providers are enabled.": "Manage how members sign-in to your workspace and which authentication providers are enabled.",
+  "Allow members to sign-in with {{ authProvider }}": "Tillad medlemmer at logge ind med {{ authProvider }}",
+  "Connect {{ authProvider }} to allow members to sign-in": "Connect {{ authProvider }} to allow members to sign-in",
+  "Connected": "Connected",
+  "Disabled": "Deaktiveret",
+  "Connect": "Connect",
+  "Allow members to sign-in using their email address": "Tillad medlemmer at logge ind med deres e-mailadresse",
+  "The server must have SMTP configured to enable this setting": "Serveren skal have SMTP konfigureret for at aktivere denne indstilling",
+  "Restrictions": "Restrictions",
   "by {{ name }}": "by {{ name }}",
   "Last used": "Last used",
   "No expiry": "No expiry",
@@ -1012,7 +1026,6 @@
   "Copied": "Copied",
   "Are you sure you want to revoke the {{ tokenName }} token?": "Are you sure you want to revoke the {{ tokenName }} token?",
   "Disconnect integration": "Disconnect integration",
-  "Connected": "Connected",
   "Disconnecting": "Disconnecting",
   "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
   "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
@@ -1083,7 +1096,6 @@
   "You can import a zip file that was previously exported from an Outline installation – collections, documents, and images will be imported. In Outline, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "You can import a zip file that was previously exported from an Outline installation – collections, documents, and images will be imported. In Outline, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.",
   "Drag and drop the zip file from the Markdown export option in {{appName}}, or click to upload": "Drag and drop the zip file from the Markdown export option in {{appName}}, or click to upload",
   "Configure": "Configure",
-  "Connect": "Connect",
   "Last active": "Last active",
   "Role": "Rolle",
   "Guest": "Guest",
@@ -1104,7 +1116,6 @@
   "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Left",
   "Right": "Right",
-  "Settings saved": "Settings saved",
   "Logo updated": "Logo updated",
   "Unable to upload new logo": "Unable to upload new logo",
   "Delete workspace": "Delete workspace",
@@ -1209,11 +1220,7 @@
   "Are you sure you want to require invites?": "Er du sikker på, at du vil kræve invitationer?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "Nye brugere skal først inviteres til at oprette en konto. <em>Standard rolle</em> og <em>Tilladte domæner</em> vil ikke længere gælde.",
   "Settings that impact the access, security, and content of your workspace.": "Indstillinger, der påvirker adgang, sikkerhed og indhold i dit arbejdsområde.",
-  "Allow members to sign-in with {{ authProvider }}": "Tillad medlemmer at logge ind med {{ authProvider }}",
-  "Disabled": "Deaktiveret",
-  "Allow members to sign-in using their email address": "Tillad medlemmer at logge ind med deres e-mailadresse",
-  "The server must have SMTP configured to enable this setting": "Serveren skal have SMTP konfigureret for at aktivere denne indstilling",
-  "Access": "Adgang",
+  "Invites": "Invites",
   "Allow users to send invites": "Tillad brugere at sende invitationer",
   "Allow editors to invite other people to the workspace": "Tillad redaktører at invitere andre personer til arbejdsrummet",
   "Require invites": "Kræv invitationer",
