--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -617,6 +617,7 @@
   "Account": "Konto",
   "API & Apps": "API & Anwendungen",
   "Details": "Details",
+  "Authentication": "Authentication",
   "Security": "Sicherheit",
   "Features": "Funktionen",
   "Members": "Mitglieder",
@@ -1004,6 +1005,19 @@
   "Authorization URL": "Autorisierungs-URL",
   "Where users are redirected to authorize this app": "Wohin Benutzer weitergeleitet werden, um diese App zu autorisieren",
   "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.": "Anwendungen ermöglichen es Ihnen, interne oder öffentliche Integrationen mit Outline zu erstellen und bieten sicheren Zugriff über OAuth. Weitere Informationen finden Sie in der <em>Entwicklerdokumentation</em>.",
+  "Settings saved": "Einstellungen gespeichert",
+  "Are you sure?": "Are you sure?",
+  "Removing": "Removing",
+  "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.",
+  "Manage how members sign-in to your workspace and which authentication providers are enabled.": "Manage how members sign-in to your workspace and which authentication providers are enabled.",
+  "Allow members to sign-in with {{ authProvider }}": "Mitgliedern erlauben, sich mit {{ authProvider }} anzumelden",
+  "Connect {{ authProvider }} to allow members to sign-in": "Connect {{ authProvider }} to allow members to sign-in",
+  "Connected": "Verbunden",
+  "Disabled": "Deaktiviert",
+  "Connect": "Verbinden",
+  "Allow members to sign-in using their email address": "Mitgliedern erlauben, sich mit ihrer E-Mail-Adresse anzumelden",
+  "The server must have SMTP configured to enable this setting": "Der Server muss SMTP konfiguriert haben, um diese Einstellung zu aktivieren",
+  "Restrictions": "Restrictions",
   "by {{ name }}": "von {{ name }}",
   "Last used": "Zuletzt verwendet",
   "No expiry": "Kein Verfall",
@@ -1012,7 +1026,6 @@
   "Copied": "Kopiert",
   "Are you sure you want to revoke the {{ tokenName }} token?": "Sind Sie sicher, den Token {{ tokenName }} zu widerrufen?",
   "Disconnect integration": "Integration trennen",
-  "Connected": "Verbunden",
   "Disconnecting": "Trenne",
   "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Sind Sie sicher, dass Sie die <em>{{ service }}</em> Integration trennen möchten?",
   "This will stop sending analytics events to the configured instance.": "Dies stoppt das Senden von Analyseereignissen an die konfigurierte Instanz.",
@@ -1083,7 +1096,6 @@
   "You can import a zip file that was previously exported from an Outline installation – collections, documents, and images will be imported. In Outline, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Sie können eine ZIP-Datei importieren, die zuvor aus einer Outline-Installation exportiert wurde. Es werden Sammlungen, Dokumente und Bilder importiert. Rufen Sie in Outline <em>Exportieren</em> in der Seitenleiste der Einstellungen auf und klicken Sie auf <em>Daten exportierten</em>.",
   "Drag and drop the zip file from the Markdown export option in {{appName}}, or click to upload": "Drag-and-Drop die Zip-Datei von Markdown Export Funktion in {{appName}}, oder klicke auf Upload",
   "Configure": "Konfigurieren",
-  "Connect": "Verbinden",
   "Last active": "Zuletzt aktiv",
   "Role": "Rolle",
   "Guest": "Gast",
@@ -1104,7 +1116,6 @@
   "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Links",
   "Right": "Rechts",
-  "Settings saved": "Einstellungen gespeichert",
   "Logo updated": "Logo aktualisiert",
   "Unable to upload new logo": "Das neue Logo konnte nicht hochgeladen werden",
   "Delete workspace": "Workspace löschen",
@@ -1209,11 +1220,7 @@
   "Are you sure you want to require invites?": "Sind Sie sicher, dass Sie Einladungen voraussetzen möchten?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "Neue Benutzer müssen zuerst eingeladen werden, um ein Konto zu erstellen. <em>Standardrolle</em> und <em>Erlaubte Domains</em> werden nicht mehr verwendet.",
   "Settings that impact the access, security, and content of your workspace.": "Einstellungen, die sich auf den Zugriff, die Sicherheit und den Inhalt Ihres Arbeitsbereichs auswirken.",
-  "Allow members to sign-in with {{ authProvider }}": "Mitgliedern erlauben, sich mit {{ authProvider }} anzumelden",
-  "Disabled": "Deaktiviert",
-  "Allow members to sign-in using their email address": "Mitgliedern erlauben, sich mit ihrer E-Mail-Adresse anzumelden",
-  "The server must have SMTP configured to enable this setting": "Der Server muss SMTP konfiguriert haben, um diese Einstellung zu aktivieren",
-  "Access": "Zugriff",
+  "Invites": "Invites",
   "Allow users to send invites": "Benutzern das Senden von Einladungen erlauben",
   "Allow editors to invite other people to the workspace": "Editoren erlauben andere Personen in den Arbeitsbereich einzuladen",
   "Require invites": "Einladungen erforderlich",
