--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -617,6 +617,7 @@
   "Account": "Account",
   "API & Apps": "API & Applicazioni",
   "Details": "Dettagli",
+  "Authentication": "Authentication",
   "Security": "Sicurezza",
   "Features": "Caratteristiche",
   "Members": "Membri",
@@ -1004,6 +1005,19 @@
   "Authorization URL": "URL di Autorizzazione",
   "Where users are redirected to authorize this app": "Dove gli utenti vengono reindirizzati per autorizzare questa app",
   "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.": "Le applicazioni consentono di creare integrazioni interne o pubbliche con Outline e di fornire accesso sicuro tramite OAuth. Per maggiori dettagli, consulta la <em>documentazione per gli sviluppatori</em>.",
+  "Settings saved": "Impostazioni salvate",
+  "Are you sure?": "Are you sure?",
+  "Removing": "Removing",
+  "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.",
+  "Manage how members sign-in to your workspace and which authentication providers are enabled.": "Manage how members sign-in to your workspace and which authentication providers are enabled.",
+  "Allow members to sign-in with {{ authProvider }}": "Consenti ai membri di accedere con {{ authProvider }}",
+  "Connect {{ authProvider }} to allow members to sign-in": "Connect {{ authProvider }} to allow members to sign-in",
+  "Connected": "Connesso",
+  "Disabled": "Disattivato",
+  "Connect": "Connetti",
+  "Allow members to sign-in using their email address": "Consenti ai membri di accedere utilizzando il loro indirizzo email",
+  "The server must have SMTP configured to enable this setting": "Il server deve disporre di SMTP configurato per abilitare questa impostazione",
+  "Restrictions": "Restrictions",
   "by {{ name }}": "di {{ name }}",
   "Last used": "Ultimo utilizzo",
   "No expiry": "Nessuna scadenza",
@@ -1012,7 +1026,6 @@
   "Copied": "Copiato",
   "Are you sure you want to revoke the {{ tokenName }} token?": "Sei sicuro di voler revocare il token {{ tokenName }}?",
   "Disconnect integration": "Disconnetti integrazione",
-  "Connected": "Connesso",
   "Disconnecting": "Disconnessione in corso",
   "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Sei sicuro di voler disconnettere l'integrazione con <em>{{ service }}</em>?",
   "This will stop sending analytics events to the configured instance.": "Ciò interromperà l'invio di eventi di analytics all'istanza configurata.",
@@ -1083,7 +1096,6 @@
   "You can import a zip file that was previously exported from an Outline installation – collections, documents, and images will be imported. In Outline, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "È possibile importare un file zip precedentemente esportato da un'installazione Outline – raccolte, documenti e immagini verranno importate. In Outline, apri <em>Esporta</em> nella barra laterale delle impostazioni e fai clic su <em>Esporta dati</em>.",
   "Drag and drop the zip file from the Markdown export option in {{appName}}, or click to upload": "Trascina e rilascia il file zip dell'export Markdown su {{appName}} o fai clic per caricarlo",
   "Configure": "Configura",
-  "Connect": "Connetti",
   "Last active": "Ultima attività",
   "Role": "Ruolo",
   "Guest": "Ospite",
@@ -1104,7 +1116,6 @@
   "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Gli emoji personalizzati possono essere utilizzati in tutto lo spazio di lavoro, nei documenti, nei commenti e nelle reazioni.",
   "Left": "Sinistra",
   "Right": "Destra",
-  "Settings saved": "Impostazioni salvate",
   "Logo updated": "Logo aggiornato",
   "Unable to upload new logo": "Impossibile caricare il nuovo logo",
   "Delete workspace": "Elimina spazio di lavoro",
@@ -1209,11 +1220,7 @@
   "Are you sure you want to require invites?": "Sei sicuro di voler richiedere gli inviti?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "I nuovi utenti dovranno prima essere invitati a creare un account. Le opzioni <em>Ruolo predefinito</em> e <em>Domini consentiti</em> non saranno più applicabili.",
   "Settings that impact the access, security, and content of your workspace.": "Impostazioni che incidono sull'accesso, sulla sicurezza e sul contenuto dell'area di lavoro.",
-  "Allow members to sign-in with {{ authProvider }}": "Consenti ai membri di accedere con {{ authProvider }}",
-  "Disabled": "Disattivato",
-  "Allow members to sign-in using their email address": "Consenti ai membri di accedere utilizzando il loro indirizzo email",
-  "The server must have SMTP configured to enable this setting": "Il server deve disporre di SMTP configurato per abilitare questa impostazione",
-  "Access": "Accesso",
+  "Invites": "Invites",
   "Allow users to send invites": "Permetti agli utenti di mandare inviti",
   "Allow editors to invite other people to the workspace": "Permetti agli editori d'invitare altri utenti nello spazio di lavoro",
   "Require invites": "Richiedi inviti",
