--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -617,6 +617,7 @@
   "Account": "アカウント",
   "API & Apps": "API & Apps",
   "Details": "詳細情報",
+  "Authentication": "Authentication",
   "Security": "セキュリティ",
   "Features": "機能",
   "Members": "メンバー",
@@ -1004,6 +1005,19 @@
   "Authorization URL": "Authorization URL",
   "Where users are redirected to authorize this app": "Where users are redirected to authorize this app",
   "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.": "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.",
+  "Settings saved": "設定が保存されました",
+  "Are you sure?": "Are you sure?",
+  "Removing": "Removing",
+  "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.",
+  "Manage how members sign-in to your workspace and which authentication providers are enabled.": "Manage how members sign-in to your workspace and which authentication providers are enabled.",
+  "Allow members to sign-in with {{ authProvider }}": "メンバーが {{ authProvider }} でログインできるようにする",
+  "Connect {{ authProvider }} to allow members to sign-in": "Connect {{ authProvider }} to allow members to sign-in",
+  "Connected": "接続されました",
+  "Disabled": "無効化済み",
+  "Connect": "接続",
+  "Allow members to sign-in using their email address": "メンバーが自分のメール アドレスを使用してログインできるようにする",
+  "The server must have SMTP configured to enable this setting": "この設定を有効にするには、サーバーに SMTP が設定されている必要があります。",
+  "Restrictions": "Restrictions",
   "by {{ name }}": "{{ name }}",
   "Last used": "最終使用日",
   "No expiry": "無期限",
@@ -1012,7 +1026,6 @@
   "Copied": "コピーしました",
   "Are you sure you want to revoke the {{ tokenName }} token?": "トークン {{ tokenName }} を失効します\nよろしいですか？",
   "Disconnect integration": "連携を解除",
-  "Connected": "接続されました",
   "Disconnecting": "切断中",
   "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
   "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
@@ -1083,7 +1096,6 @@
   "You can import a zip file that was previously exported from an Outline installation – collections, documents, and images will be imported. In Outline, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "以前、 Outline からエクスポートされた zip ファイルをインポートできます。コレクション、ドキュメント、および画像がインポートされます。 設定から、 <em>エクスポート画面</em> を開き、 <em>データのエクスポート</em>をクリックします。",
   "Drag and drop the zip file from the Markdown export option in {{appName}}, or click to upload": "{{appName}} の Markdown エクスポートオプションから zip ファイルをドラッグ&ドロップするか、クリックしてアップロードします",
   "Configure": "Configure",
-  "Connect": "接続",
   "Last active": "最終ログイン",
   "Role": "ロール",
   "Guest": "ゲスト",
@@ -1104,7 +1116,6 @@
   "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "左",
   "Right": "右",
-  "Settings saved": "設定が保存されました",
   "Logo updated": "ロゴが更新されました",
   "Unable to upload new logo": "ロゴをアップロードできませんでした",
   "Delete workspace": "ワークスペースを削除",
@@ -1209,11 +1220,7 @@
   "Are you sure you want to require invites?": "招待を要求してもよろしいですか？",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "新しいユーザーは、アカウントを作成するために招待される必要があります。 <em>デフォルトのロール</em> および <em>許可されたドメイン</em> は適用されなくなります。",
   "Settings that impact the access, security, and content of your workspace.": "ワークスペースのアクセス、セキュリティ、およびコンテンツに影響する設定。",
-  "Allow members to sign-in with {{ authProvider }}": "メンバーが {{ authProvider }} でログインできるようにする",
-  "Disabled": "無効化済み",
-  "Allow members to sign-in using their email address": "メンバーが自分のメール アドレスを使用してログインできるようにする",
-  "The server must have SMTP configured to enable this setting": "この設定を有効にするには、サーバーに SMTP が設定されている必要があります。",
-  "Access": "アクセス",
+  "Invites": "Invites",
   "Allow users to send invites": "ユーザーが招待を送信できるようにする",
   "Allow editors to invite other people to the workspace": "編集者が他の人をワークスペースに招待できるようにする",
   "Require invites": "招待が必要",
